Implement resource add in task